add Approval Stages Documentation
